(library
 (name xlib)             ; Wewnętrzna nazwa biblioteki
 (public_name xlib)      ; Nazwa publiczna (umożliwia instalację jak w 'make install')

 ; Mapowanie flag '-I +...' na biblioteki Dune/Opam
 ; str i unix to biblioteki standardowe, reszta to zewnętrzne pakiety
 (libraries zip bz2 zarith str unix)

 ; Odpowiednik flagi -linkall z Makefile
 (library_flags :standard -linkall)

 ; Wyłącza traktowanie wszystkich ostrzeżeń jako błędów
 (flags :standard -warn-error -A)

 ; Makefile sugeruje, że moduły są dostępne bezpośrednio (np. Xstring),
 ; a nie jako Xlib.Xstring. Aby zachować to zachowanie:
 (wrapped false)

 ; Dune automatycznie znajdzie pliki .ml i .mli w katalogu.
 ; Nie musisz wymieniać ich ręcznie, chyba że chcesz wykluczyć inne pliki.
 ; Jeśli chcesz być precyzyjny, odkomentuj poniższą linię i wymień pliki:
 ; (modules xstring file int xlist xset xmap bitArray xstd xunicode extArray xlatex lexer xjson xjsonSchema trie xrandom)
)
